--- a/build.gradle
+++ b/build.gradle
@@ -3,7 +3,22 @@ plugins {
 }
 
 group 'me.giverplay'
-version '1.0-SNAPSHOT'
+version '1.0'
+
+sourceCompatibility = '1.8'
+targetCompatibility = '1.8'
+
+jar {
+    manifest {
+        attributes "Main-Class": "me.giverplay.flappybird.Game"
+    }
+
+    from {
+        configurations.compile.collect {
+            it.isDirectory() ? it : zipTree(it)
+        }
+    }
+}
 
 repositories {
     mavenCentral()
